docs/tests/typing/bad/testfile-comparison-3.cpp

class S { public: int a; };
int main() { S s1; S s2; s1 < s2; }
